--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,33 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+.directory
+
+coverage
+.nyc_output
+
+# User media
+user-media/*
+.vscode
+
+# Secrets
+.env
+.env.docker
+
+#rabbitmq 
+rabbitmq/rabbitmq_data
+
+# Documentation
+docs
+
+#Code quality tools
+.scannerwork
+sonar-project.properties
